# crypto-forecasting-app

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/workflows/: crypto_jobs.yml
back-end/: Dockerfile  config.py  jobs.py  main.py  pyproject.toml  render.yaml
back-end/app/clients/: binance_client.py  supabase_client.py
back-end/app/repositories/: crypto_forecast_repository.py
back-end/app/services/: binance_market_data_service.py
controllers/: account_history_controller.py  controllers_manager.py  market_data_controller.py
services/: binance_account_history_service.py  binance_market_data_service.py  services_manager.py
