[project]
name = "explorador-de-mercado-binance-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "python-binance>=1.0.37",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
]
